Bug 864017: Deal with GrallocPlanarYCbCrImage on the client side. r=bjacob